    content signatures (MD5 checksums), not a concatenation of the
    children's contents, to avoid using large amounts of memory during
    signature calculation.

  From Steven Knight:

  - Add an Options.UnknownOption() method that returns any settings
    (from the command line, or whatever dictionary was passed in)
    that aren't known to the Options object.

  - Add a Glob() function.



RELEASE 0.XX - XXX

  From Steven Knight:

  - Fix the wix Tool module to handle null entries in $PATH variables.

  - Move the documentation of Install() and InstallAs() from the list
    of functions to the list of Builders (now that they're implemented
    as such).

  - Allow env.CacheDir() to be set per construction environment.  The
    global CacheDir() function now sets an overridable global default.

  - Add an env.Decider() method and a Node.Decider() method that allow
    flexible specification of an arbitrary function to decide if a given
    dependency has changed since the last time a target was built.

  - Don't execute Configure actions (while reading SConscript files)
    when cleaning (-c) or getting help (-h or -H).

  - Add to each target an implicit dependency on the external command(s)
    used to build the target, as found by searching env['ENV']['PATH']
    for the first argument on each executed command line.

  - Add support for a $IMPLICIT_COMMAND_DEPENDENCIES construction
    variabe that can be used to disable the automatic implicit
    dependency on executed commands.

  - Add an "ensure_suffix" keyword to Builder() definitions that, when
    true, will add the configured suffix to the targets even if it looks
    like they already have a different suffix.

  - Add a Progress() function that allows for calling a function or string
    (or list of strings) to display progress while walking the DAG.

  - Allow ParseConfig(), MergeFlags() and ParseFlags() to handle output
    from a *config command with quoted path names that contain spaces.
